Fix Maven MAVEN_OPTS - remove deprecated MaxPermSize option for Java 8+